--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -46,9 +46,11 @@ h4 {
   line-height: 32px;
 }
 
-.bg_pattern {
-  width: 780px;
-  height: 780px;
+.bg_pattern img {
+  display: flex;
+  position: absolute;
+  left: -50%;
+  top: -70%;
 }
 
 .header_content {
@@ -66,10 +68,73 @@ h4 {
 
 .nav_bar {
   display: none;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #1b262f;
+  width: 0;
+  height: 100dvh;
+  padding: 45px 15px;
+  gap: 25px;
+  overflow: hidden;
+}
+.nav_bar .btn_close {
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+}
+.nav_bar .btn_close .hamburguer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  gap: 4px;
+  width: 100%;
+  height: 100%;
+}
+.nav_bar .btn_close .hamburguer .bar {
+  background-color: #fbfcfe;
+  width: 30px;
+  height: 4px;
+}
+.nav_bar .btn_close .hamburguer #bar_1 {
+  transform: rotate(45deg) translate(-5px, 8px);
+}
+.nav_bar .btn_close .hamburguer #bar_2 {
+  background-color: transparent;
+}
+.nav_bar .btn_close .hamburguer #bar_3 {
+  transform: rotate(-45deg) translate(3px, -16px);
+}
+.nav_bar .line {
+  width: 100%;
+  height: 1px;
+  background-color: #fbfcfe;
+}
+.nav_bar .nav_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 15px;
+}
+.nav_bar .nav_list .nav_item a {
+  color: #fbfcfe;
+  font-size: 20px;
+  font-weight: bold;
+  width: 150px;
+}
+.nav_bar .nav_list .btn-menu {
+  width: 100%;
 }
 
 .burger {
-  width: 40px;
+  width: 30px;
   height: 30px;
   background: transparent;
   border: none;
@@ -90,6 +155,19 @@ h4 {
   border-radius: 5px;
 }
 
+.active {
+  display: flex;
+  width: 77%;
+  overflow: auto;
+  transition: all 0.5s ease-in-out;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: #fbfcfe;
 }
@@ -97,4 +175,28 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.btn {
+  background-color: #ba4270;
+  color: #fbfcfe;
+  width: 173px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 24px;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #da6d97;
 }/*# sourceMappingURL=default.css.map */
