--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -49,8 +49,9 @@ h4 {
 .bg_pattern img {
   display: flex;
   position: absolute;
-  left: -50%;
-  top: -70%;
+  left: -29%;
+  top: -50%;
+  z-index: -1;
 }
 
 .header_content {
@@ -166,6 +167,7 @@ h4 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
