--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -49,9 +49,10 @@ h4 {
 .bg_pattern img {
   display: flex;
   position: absolute;
-  left: -29%;
-  top: -50%;
+  left: 50%;
+  top: -40%;
   z-index: -1;
+  transform: translate(-50%, 0%);
 }
 
 .header_content {
