--- a/assets/css/parts/_header.scss
+++ b/assets/css/parts/_header.scss
@@ -1,9 +1,10 @@
 .bg_pattern img{
     display: flex;
     position: absolute;
-    left: -29%;
-    top: -50%;
+    left: 50%;
+    top: -40%;
     z-index: -1;
+    transform: translate(-50%, 0%);
 }
 
 .header_content {
