--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: $link_water_white;
+    background: #edf3f8;
 }
 
 .container {
@@ -38,8 +38,30 @@ a {
     justify-content: center;
     border-radius: 24px;
     transition: background-color .5s ease-in-out;
+    cursor: pointer;
 }
 
 .btn:hover {
     background-color: $charm_pink;
+}
+
+.btn_ligth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 129px;
+    height: 48px;
+    border: 1px solid $link_water_white;
+    border-radius: 24px;
+    color: $link_water_white;
+    background: transparent;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+
+}
+
+.btn_ligth:hover {
+    background: $link_water_white;
+    color: $mirage_blue;
 }
