--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -93,7 +93,6 @@ h4 {
 }
 
 .nav_bar {
-  display: none;
   flex-direction: column;
   align-items: start;
   justify-content: start;
@@ -106,6 +105,7 @@ h4 {
   padding: 45px 15px;
   gap: 25px;
   overflow: hidden;
+  opacity: 0;
   transition: all 0.5s ease-in-out;
 }
 .nav_bar .btn_close {
@@ -113,6 +113,7 @@ h4 {
   height: 40px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 .nav_bar .btn_close .hamburguer {
   display: flex;
@@ -169,6 +170,7 @@ h4 {
   height: 30px;
   background: transparent;
   border: none;
+  cursor: pointer;
 }
 .burger .hamburguer {
   width: 100%;
@@ -189,7 +191,7 @@ h4 {
 .active {
   display: flex;
   width: 77%;
-  overflow: auto;
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
