--- a/assets/css/parts/_header.scss
+++ b/assets/css/parts/_header.scss
@@ -23,7 +23,6 @@
 }
 
 .nav_bar {
-    display: none;
     flex-direction: column;
     align-items: start;
     justify-content: start;
@@ -36,6 +35,7 @@
     padding: 45px 15px;
     gap: 25px;
     overflow: hidden;
+    opacity: 0;
     transition: all .5s ease-in-out;
 
     .btn_close {
@@ -43,6 +43,7 @@
         height: 40px;
         background-color: transparent;
         border: none;
+        cursor: pointer;
 
         .hamburguer{
             display: flex;
@@ -113,6 +114,7 @@
     height: 30px;
     background: transparent;
     border: none;
+    cursor: pointer;
 
     .hamburguer {
         width: 100%;
@@ -135,7 +137,7 @@
 .active {
     display: flex;
     width: 77%;
-    overflow: auto;
+    opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
