--- a/assets/css/parts/_header.scss
+++ b/assets/css/parts/_header.scss
@@ -31,7 +31,7 @@
     right: 0;
     background-color: $mirage_blue;
     width: 0;
-    height: 100dvh;
+    height: 100%;
     padding: 45px 15px;
     gap: 25px;
     overflow: hidden;
