--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -42,7 +42,7 @@ p {
     letter-spacing: -0.37px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   h1 {
     font-size: 72px;
     line-height: 76px;
@@ -216,7 +216,7 @@ h4 {
     display: none;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bg_pattern img {
     display: flex;
     position: absolute;
@@ -305,7 +305,7 @@ h4 {
     height: 100%;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .start {
     flex-direction: row;
     width: 100%;
@@ -345,7 +345,6 @@ h4 {
   align-items: center;
   justify-content: center;
   gap: 25px;
-  width: 336px;
   margin: auto;
 }
 .work .txt_work h2, .work .txt_work p {
@@ -363,7 +362,7 @@ h4 {
     width: 437px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .work {
     flex-direction: row;
     align-items: center;
@@ -379,6 +378,49 @@ h4 {
     margin: 0;
   }
   .work .txt_work .btn_ligth {
+    margin: 0;
+  }
+}
+.implement {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.implement .img_code img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  left: 5%;
+}
+.implement .text_implement {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.implement .text_implement h2 {
+  color: #36536b;
+}
+.implement .text_implement p {
+  color: #6c8294;
+  max-width: 580px;
+  margin: auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .implement {
+    flex-direction: row;
+  }
+  .implement .text_implement {
+    text-align: left;
+  }
+  .implement .text_implement p {
+    width: 424px;
     margin: 0;
   }
 }
