--- a/assets/css/parts/_main.scss
+++ b/assets/css/parts/_main.scss
@@ -22,7 +22,6 @@
         align-items: center;
         justify-content: center;
         gap: 25px;
-        width: 336px;
         margin: auto;
 
         h2, p {
@@ -48,7 +47,7 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
     .work {
         flex-direction: row;
         align-items: center;
@@ -65,6 +64,58 @@
             margin: 0;
 
             .btn_ligth {
+                margin: 0;
+            }
+        }
+    }
+}
+
+.implement {
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .img_code {
+        img {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            left: 5%;
+        }
+    }
+
+    .text_implement {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+
+        h2 {
+            color: $san_juan_blue;
+        }
+
+        p {
+            color: $linght_san_juan_blue;
+            max-width: 580px;
+            margin: auto;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .implement {
+        flex-direction: row;
+
+        .text_implement {
+            text-align: left;
+
+            p {
+                width: 424px;
                 margin: 0;
             }
         }
