--- a/assets/css/parts/_header.scss
+++ b/assets/css/parts/_header.scss
@@ -216,31 +216,6 @@
             color: $san_juan_blue;
         }
 
-        #form {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-
-            #email {
-                padding: 15px 30px;
-                border-radius: 24px;
-                border: none;
-                box-shadow: 10px 10px 25px -10px #36536b38;
-                outline: none;
-            }
-
-            #email::placeholder {
-                font-weight: bold;
-                color: $san_juan_blue;
-                font-family: $public_sans;
-            }
-
-            .btn {
-                width: 100%;
-            }
-        }
-
         p {
             color: $linght_san_juan_blue;
 
@@ -252,28 +227,51 @@
     }
 }
 
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    .email {
+        padding: 15px 30px;
+        border-radius: 24px;
+        border: none;
+        box-shadow: 10px 10px 25px -10px #36536b38;
+        outline: none;
+    }
+
+    .email::placeholder {
+        font-weight: bold;
+        color: $san_juan_blue;
+        font-family: $public_sans;
+    }
+
+    .btn {
+        width: 100%;
+    }
+}
+
+
 @media screen and (min-width: 768px) {
     .start {
         width: 500px;
+    }
 
-        .text_start {
+    .form {
+        position: relative;
+        flex-direction: row;
+        width: 470px;
 
-            #form {
-                position: relative;
-                flex-direction: row;
-                width: 470px;
+        .email {
+            width: 100%;
+        }
 
-                #email {
-                    width: 100%;
-                }
-
-                .btn {
-                    position: absolute;
-                    right: 0;
-                    width: 40%;
-                    height: 100%;
-                }
-            }
+        .btn {
+            position: absolute;
+            right: 0;
+            width: 40%;
+            height: 100%;
         }
     }
 }
