--- a/assets/css/parts/_main.scss
+++ b/assets/css/parts/_main.scss
@@ -70,14 +70,14 @@
     }
 }
 
-.implement {
+.content {
     padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    .img_code {
+    .img_code, .img_user {
         img {
             display: flex;
             align-items: center;
@@ -89,7 +89,7 @@
         }
     }
 
-    .text_implement {
+    .text_implement, .text_user {
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -107,16 +107,183 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
-    .implement {
-        flex-direction: row;
+.circle_bg img {
+    display: none;
+}
 
-        .text_implement {
+@media screen and (min-width: 1280px) {
+    .content {
+        flex-direction: row;
+        justify-content: space-between;
+
+        .text_implement, .text_user {
             text-align: left;
 
             p {
                 width: 424px;
                 margin: 0;
+            }
+        }
+
+        .text_user {
+            order: -1;
+        }
+    }
+
+    .circle_bg img {
+        display: block;
+        position: absolute;
+        top: 1700px;
+        right: -10%;
+        z-index: -1;
+    }
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 45px;
+    padding: 40px;
+
+    .about_content {
+        text-align: center;
+
+        .about_text {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            margin-top: 15px;
+            width: 100%;
+            max-width: 350px;
+
+            h3 {
+                color:  $san_juan_blue;
+            }
+
+            p {
+                color: $linght_san_juan_blue;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .about {
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 15px;
+    }
+}
+
+.ready {
+    width: 326px;
+    padding: 40px 0;
+
+    h2 {
+        color: $san_juan_blue;
+        text-align: center;
+        margin-bottom: 25px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .ready {
+        width: 500px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .ready {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        padding: 40px;
+
+        .form {
+            height: 45px;
+        }
+    }   
+}
+
+#footer {
+    background-color: $mirage_blue;
+    margin-top: 40px;
+
+    .footer_content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 40px;
+        gap: 25px;
+
+        .left_content {
+        
+        
+            .nav_list {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+                text-align: center;
+                margin: 25px 0;
+
+                .nav_link a {
+                    color: $link_water_white;
+                }
+            }
+
+        }
+
+        .social_media {
+            display: flex;
+            gap: 25px;
+            
+            a i {
+                color: $link_water_white;
+                font-size: 1.5em;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #footer {
+        .footer_content {
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            padding: 5px 40px;
+
+            .left_content {
+                width: 65%;
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+
+                .nav_list {
+                    flex-direction: row;
+                    justify-content: end;
+                }
+            }
+
+            .social_media {
+                width: 25%;
+                justify-content: end;
+                align-items: center;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    #footer {
+        .footer_content {
+        
+            .left_content {
+                width: 35%;
             }
         }
     }
