--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -13,10 +13,11 @@
 
 body {
     background: #edf3f8;
+    margin: auto;
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1280px;
     margin: auto;
 }
 
