--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -1,6 +1,7 @@
 @import 'parts/color';
-@import 'pages/pricing';
 @import 'parts/typography';
+@import 'pages/pricing';
+@import 'pages/about';
 
 
 
